[package]
name = "rust-duplicati-restore"
description = "A program to restore duplicati backups"
license = "MIT"
version = "0.0.2"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"

[dependencies]
zip = "0.5.2"
chrono = "0.4.0"
base64 = "0.10.1"
pbr = "1.0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.39"
rayon = "1.0"
num_cpus = "1.10.0"
unqlite = "1.5"
indicatif = "0.11.0"
clap = { version = "4.0.32", features = ["derive"] }
eyre = "0.6.8"
serde_path_to_error = "0.1"
