[package]
name = "rust-duplicati-restore"
description = "A program to restore duplicati backups"
license = "MIT"
version = "0.0.3"
authors = ["Nathan McCarty <nathan@mccarty.io>", "7ERr0r"]
edition = "2021"

[profile.dev]
opt-level = 2

[features]
dhat-heap = ["dep:dhat"]    # if you are doing heap profiling
unqlite = ["dep:unqlite"]

[dependencies]
zip = { version = "*", git = "https://github.com/7ERr0r/zip-duplicati", rev = "77f115763e7d1e686273589e7b26f4efd3f5bf38" }
chrono = "0.4.0"
base64 = "0.10.1"
pbr = "1.0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.39"
rayon = "1.0"
#num_cpus = "1.10.0"
unqlite = { version = "1.5", optional = true }
indicatif = "0.11.0"
clap = { version = "4.0.32", features = ["derive"] }
eyre = "0.6.8"
serde_path_to_error = "0.1"
smallvec = "*"
sha2 = "0.10.6"
crossbeam-channel = "0.5.6"
dhat = { version = "0.3.2", optional = true }

